k8s/overlays/staging/worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 2 # We don't need as many workers in staging
