k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garbo
spec:
  rules:
    - host: stage-api.klimatkollen.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garbo
                port:
                  number: 80
